[gd_scene load_steps=8 format=3 uid="uid://c7kau2srmy78i"]

[ext_resource type="Script" path="res://scripts/entity_components/SpawnerComponent_dronefactory.gd" id="1_bovej"]
[ext_resource type="Script" path="res://scenes/enemies/enemy_dronefactory.gd" id="1_os3qv"]
[ext_resource type="Texture2D" uid="uid://dc5x12svgwuv7" path="res://assets/sprite_enemies/drone_factory.png" id="2_3fh6q"]
[ext_resource type="Script" path="res://scripts/entity_components/HurtboxComponent.gd" id="4_njlba"]
[ext_resource type="Script" path="res://scenes/UI/Label_HP.gd" id="5_faxpp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfqw3"]
size = Vector2(22, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdgdi"]
size = Vector2(22, 17)

[node name="enemy_dronefactory" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_os3qv")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("1_bovej")

[node name="Marker2D" type="Marker2D" parent="SpawnerComponent"]
position = Vector2(-23, -14)

[node name="Marker2D2" type="Marker2D" parent="SpawnerComponent"]
position = Vector2(0, -20)

[node name="Marker2D3" type="Marker2D" parent="SpawnerComponent"]
position = Vector2(22, -14)

[node name="spawn_timer" type="Timer" parent="SpawnerComponent"]
wait_time = 7.0
autostart = true

[node name="Sprite2D_main" type="Sprite2D" parent="."]
texture = ExtResource("2_3fh6q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_bfqw3")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("entity")]
collision_layer = 8
collision_mask = 0
monitoring = false
script = ExtResource("4_njlba")
entity = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gdgdi")
debug_color = Color(0.694118, 0.47451, 0.4, 0.419608)

[node name="Label_HP" type="Label" parent="." node_paths=PackedStringArray("entity")]
offset_left = -16.0
offset_top = 12.0
offset_right = -15.0
offset_bottom = 35.0
scale = Vector2(0.3, 0.3)
script = ExtResource("5_faxpp")
entity = NodePath("..")

[connection signal="timeout" from="SpawnerComponent/spawn_timer" to="SpawnerComponent" method="_on_spawn_timer_timeout"]
